@@ -515,6 +515,14 @@ void Init_oci8_win32(VALUE cOCI8);
 /* hook_funcs.c */
 void oci8_install_hook_functions(void);
 void oci8_shutdown_sockets(void);
+#ifdef HAVE_PLTHOOK
+extern int oci8_cancel_read_at_exit;
+#ifdef __linux
+extern int oci8_tcp_keepalive_time;
+extern int oci8_tcp_keepalive_intvl;
+extern int oci8_tcp_keepalive_probes;
+#endif
+#endif
 
 #define OCI8StringValue(v) do { \
     StringValue(v); \
